project_3/myCheckerParser.java
// $ANTLR 3.5.2 myChecker.g 2020-05-24 19:56:02

// import packages here.
    import java.util.HashMap;
    import java.lang.Math;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class myCheckerParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ADD_ASS_OP", "ADD_OP", "AND_ASS_OP", 
		"AND_OP", "ARROW_OP", "ASSIGN_OP", "BIT_AND_OP", "BIT_OR_OP", "BIT_XOR_OP", 
		"BREAK", "CHAR", "COMMA_OP", "COMMENT", "CONST", "Character_constant", 
		"DIV_ASS_OP", "DIV_OP", "DOT_OP", "ELSE", "ELSE_IF", "EQ_OP", "FLOAT", 
		"FOR", "Floating_point_constant", "GE_OP", "GREATER_OP", "IF", "INT", 
		"Identifier", "Integer_constant", "LESS_OP", "LE_OP", "LSHIFT_OP", "Literal_constant", 
		"MACRO", "MAIN", "MM_OP", "MOD_ASS_OP", "MOD_OP", "MUL_ASS_OP", "MUL_OP", 
		"NE_OP", "OR_ASS_OP", "OR_OP", "PP_OP", "PRINTF", "RETURN", "RSHIFT_OP", 
		"SUB_ASS_OP", "SUB_OP", "TRINARY_OP1", "TRINARY_OP2", "VOID", "WHILE", 
		"WS", "XOR_ASS_OP", "'('", "')'", "');'", "';'", "'{'", "'}'"
	};
	public static final int EOF=-1;
	public static final int T__60=60;
	public static final int T__61=61;
	public static final int T__62=62;
	public static final int T__63=63;
	public static final int T__64=64;
	public static final int T__65=65;
	public static final int ADD_ASS_OP=4;
	public static final int ADD_OP=5;
	public static final int AND_ASS_OP=6;
	public static final int AND_OP=7;
	public static final int ARROW_OP=8;
	public static final int ASSIGN_OP=9;
	public static final int BIT_AND_OP=10;
	public static final int BIT_OR_OP=11;
	public static final int BIT_XOR_OP=12;
	public static final int BREAK=13;
	public static final int CHAR=14;
	public static final int COMMA_OP=15;
	public static final int COMMENT=16;
	public static final int CONST=17;
	public static final int Character_constant=18;
	public static final int DIV_ASS_OP=19;
	public static final int DIV_OP=20;
	public static final int DOT_OP=21;
	public static final int ELSE=22;
	public static final int ELSE_IF=23;
	public static final int EQ_OP=24;
	public static final int FLOAT=25;
	public static final int FOR=26;
	public static final int Floating_point_constant=27;
	public static final int GE_OP=28;
	public static final int GREATER_OP=29;
	public static final int IF=30;
	public static final int INT=31;
	public static final int Identifier=32;
	public static final int Integer_constant=33;
	public static final int LESS_OP=34;
	public static final int LE_OP=35;
	public static final int LSHIFT_OP=36;
	public static final int Literal_constant=37;
	public static final int MACRO=38;
	public static final int MAIN=39;
	public static final int MM_OP=40;
	public static final int MOD_ASS_OP=41;
	public static final int MOD_OP=42;
	public static final int MUL_ASS_OP=43;
	public static final int MUL_OP=44;
	public static final int NE_OP=45;
	public static final int OR_ASS_OP=46;
	public static final int OR_OP=47;
	public static final int PP_OP=48;
	public static final int PRINTF=49;
	public static final int RETURN=50;
	public static final int RSHIFT_OP=51;
	public static final int SUB_ASS_OP=52;
	public static final int SUB_OP=53;
	public static final int TRINARY_OP1=54;
	public static final int TRINARY_OP2=55;
	public static final int VOID=56;
	public static final int WHILE=57;
	public static final int WS=58;
	public static final int XOR_ASS_OP=59;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public myCheckerParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public myCheckerParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return myCheckerParser.tokenNames; }
	@Override public String getGrammarFileName() { return "myChecker.g"; }


	    // boolean TRACEON = true;
	    boolean TRACEON = false;
	    HashMap<String,Integer> symtab = new HashMap<String, Integer>();
	    final String[] type_dict = {"err", "int", "float", "char"};
	    public boolean match_operands(int a, int b, int a_line, String op) {
	        if (a==0 || b==0 || Math.abs(a) != Math.abs(b)) { 
				  System.out.println("Type Error: line: " + 
					                 a_line +
							         ": Type mismatch for the operator " + op + " in an expression. (" +
	                                 type_dict[Math.abs(a)] + " vs " +
	                                 type_dict[Math.abs(b)] + ")"
	                                 );
	              return false;
	        }
	        return true;
	    }

		/* abs(attr_type):
	       0 => error,
	       1 => integer,
	       2 => float
	       3 => char,

	       sign(attr_type):
	       <0: const
	       >0: variable
	    */	   



	// $ANTLR start "program"
	// myChecker.g:39:1: program : ( VOID | INT ) MAIN '(' ( . )* ')' '{' declarations statements '}' ;
	public final void program() throws RecognitionException {
		try {
			// myChecker.g:39:8: ( ( VOID | INT ) MAIN '(' ( . )* ')' '{' declarations statements '}' )
			// myChecker.g:39:9: ( VOID | INT ) MAIN '(' ( . )* ')' '{' declarations statements '}'
			{
			if ( input.LA(1)==INT||input.LA(1)==VOID ) {
				input.consume();
				state.errorRecovery=false;
			}
			else {
				MismatchedSetException mse = new MismatchedSetException(null,input);
				throw mse;
			}
			match(input,MAIN,FOLLOW_MAIN_in_program26); 
			match(input,60,FOLLOW_60_in_program28); 
			// myChecker.g:39:29: ( . )*
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==61) ) {
					alt1=2;
				}
				else if ( ((LA1_0 >= ADD_ASS_OP && LA1_0 <= 60)||(LA1_0 >= 62 && LA1_0 <= 65)) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// myChecker.g:39:29: .
					{
					matchAny(input); 
					}
					break;

				default :
					break loop1;
				}
			}

			match(input,61,FOLLOW_61_in_program33); 
			match(input,64,FOLLOW_64_in_program35); 
			pushFollow(FOLLOW_declarations_in_program37);
			declarations();
			state._fsp--;

			pushFollow(FOLLOW_statements_in_program39);
			statements();
			state._fsp--;

			match(input,65,FOLLOW_65_in_program41); 
			if (TRACEON) System.out.println("program:(VOID|INT) MAIN '(' .* ')' '{' declarations statements '}'");
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "program"



	// $ANTLR start "declarations"
	// myChecker.g:43:1: declarations : ( const_type type Identifier ( ASSIGN_OP arith_expression )? ';' declarations |);
	public final void declarations() throws RecognitionException {
		Token Identifier1=null;
		int type2 =0;
		int const_type3 =0;
		ParserRuleReturnScope arith_expression4 =null;

		try {
			// myChecker.g:43:13: ( const_type type Identifier ( ASSIGN_OP arith_expression )? ';' declarations |)
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( (LA3_0==CHAR||LA3_0==CONST||LA3_0==FLOAT||LA3_0==INT) ) {
				alt3=1;
			}
			else if ( (LA3_0==BREAK||LA3_0==Character_constant||(LA3_0 >= FOR && LA3_0 <= Floating_point_constant)||LA3_0==IF||(LA3_0 >= Identifier && LA3_0 <= Integer_constant)||LA3_0==MM_OP||(LA3_0 >= PP_OP && LA3_0 <= RETURN)||LA3_0==SUB_OP||LA3_0==WHILE||LA3_0==60||LA3_0==65) ) {
				alt3=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				throw nvae;
			}

			switch (alt3) {
				case 1 :
					// myChecker.g:44:3: const_type type Identifier ( ASSIGN_OP arith_expression )? ';' declarations
					{
					pushFollow(FOLLOW_const_type_in_declarations62);
					const_type3=const_type();
					state._fsp--;

					pushFollow(FOLLOW_type_in_declarations64);
					type2=type();
					state._fsp--;

					Identifier1=(Token)match(input,Identifier,FOLLOW_Identifier_in_declarations66); 

						   if (TRACEON) System.out.println("declarations: const_type type Identifier : declarations");
					  	   if (symtab.containsKey((Identifier1!=null?Identifier1.getText():null))) {
							      System.out.println("Type Error: line: " + Identifier1.getLine() + ": Redeclared identifier: " + (Identifier1!=null?Identifier1.getText():null) );
						      } 
					        else {
							      symtab.put((Identifier1!=null?Identifier1.getText():null), type2 * const_type3);	   
						      }
						
					// myChecker.g:53:3: ( ASSIGN_OP arith_expression )?
					int alt2=2;
					int LA2_0 = input.LA(1);
					if ( (LA2_0==ASSIGN_OP) ) {
						alt2=1;
					}
					switch (alt2) {
						case 1 :
							// myChecker.g:53:5: ASSIGN_OP arith_expression
							{
							match(input,ASSIGN_OP,FOLLOW_ASSIGN_OP_in_declarations75); 
							pushFollow(FOLLOW_arith_expression_in_declarations77);
							arith_expression4=arith_expression();
							state._fsp--;


							          int temp = symtab.get((Identifier1!=null?Identifier1.getText():null));
							          if (temp==0 || (arith_expression4!=null?((myCheckerParser.arith_expression_return)arith_expression4).attr_type:0)==0 || Math.abs(temp) != Math.abs((arith_expression4!=null?((myCheckerParser.arith_expression_return)arith_expression4).attr_type:0))) {
							          System.out.println("Type Error: line: " + (arith_expression4!=null?(arith_expression4.start):null).getLine() +
													                ": Initialization failed. Type mismatch for the two silde operands in an assignment statement. (" +
							                            type_dict[Math.abs(temp)] + " vs " + type_dict[Math.abs((arith_expression4!=null?((myCheckerParser.arith_expression_return)arith_expression4).attr_type:0))] + ")" );
							          }
							      
							}
							break;

					}

					match(input,63,FOLLOW_63_in_declarations84); 
					pushFollow(FOLLOW_declarations_in_declarations86);
					declarations();
					state._fsp--;

					}
					break;
				case 2 :
					// myChecker.g:61:6: 
					{
					 if (TRACEON) System.out.println("declarations: "); 
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "declarations"



	// $ANTLR start "const_type"
	// myChecker.g:63:1: const_type returns [int attr_constant] : ( CONST |);
	public final int const_type() throws RecognitionException {
		int attr_constant = 0;


		try {
			// myChecker.g:64:5: ( CONST |)
			int alt4=2;
			int LA4_0 = input.LA(1);
			if ( (LA4_0==CONST) ) {
				alt4=1;
			}
			else if ( (LA4_0==CHAR||LA4_0==FLOAT||LA4_0==INT) ) {
				alt4=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 4, 0, input);
				throw nvae;
			}

			switch (alt4) {
				case 1 :
					// myChecker.g:64:7: CONST
					{
					match(input,CONST,FOLLOW_CONST_in_const_type122); 
					 if (TRACEON) System.out.println("type: constant: "); attr_constant = -1; 
					}
					break;
				case 2 :
					// myChecker.g:65:7: 
					{
					 if (TRACEON) System.out.println("type: variable: "); attr_constant = 1; 
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return attr_constant;
	}
	// $ANTLR end "const_type"



	// $ANTLR start "type"
	// myChecker.g:68:1: type returns [int attr_type] : ( INT | FLOAT | CHAR );
	public final int type() throws RecognitionException {
		int attr_type = 0;


		try {
			// myChecker.g:69:2: ( INT | FLOAT | CHAR )
			int alt5=3;
			switch ( input.LA(1) ) {
			case INT:
				{
				alt5=1;
				}
				break;
			case FLOAT:
				{
				alt5=2;
				}
				break;
			case CHAR:
				{
				alt5=3;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 5, 0, input);
				throw nvae;
			}
			switch (alt5) {
				case 1 :
					// myChecker.g:69:4: INT
					{
					match(input,INT,FOLLOW_INT_in_type146); 
					 
					    if (TRACEON) System.out.println("type: INT");  
					    attr_type = 1; 
					    
					}
					break;
				case 2 :
					// myChecker.g:73:4: FLOAT
					{
					match(input,FLOAT,FOLLOW_FLOAT_in_type156); 
					 
					    if (TRACEON) System.out.println("type: FLOAT");  
					    attr_type = 2; 
					    
					}
					break;
				case 3 :
					// myChecker.g:77:4: CHAR
					{
					match(input,CHAR,FOLLOW_CHAR_in_type163); 
					 
					    if (TRACEON) System.out.println("type: CHAR");  
					    attr_type = 3; 
					    
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return attr_type;
	}
	// $ANTLR end "type"



	// $ANTLR start "statements"
	// myChecker.g:83:1: statements : ( statement statements |);
	public final void statements() throws RecognitionException {
		try {
			// myChecker.g:84:2: ( statement statements |)
			int alt6=2;
			int LA6_0 = input.LA(1);
			if ( (LA6_0==BREAK||LA6_0==Character_constant||(LA6_0 >= FOR && LA6_0 <= Floating_point_constant)||LA6_0==IF||(LA6_0 >= Identifier && LA6_0 <= Integer_constant)||LA6_0==MM_OP||(LA6_0 >= PP_OP && LA6_0 <= RETURN)||LA6_0==SUB_OP||LA6_0==WHILE||LA6_0==60) ) {
				alt6=1;
			}
			else if ( (LA6_0==65) ) {
				alt6=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 6, 0, input);
				throw nvae;
			}

			switch (alt6) {
				case 1 :
					// myChecker.g:84:3: statement statements
					{
					pushFollow(FOLLOW_statement_in_statements173);
					statement();
					state._fsp--;

					pushFollow(FOLLOW_statements_in_statements175);
					statements();
					state._fsp--;

					}
					break;
				case 2 :
					// myChecker.g:85:3: 
					{
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "statements"


	public static class arith_expression_return extends ParserRuleReturnScope {
		public int attr_type;
	};


	// $ANTLR start "arith_expression"
	// myChecker.g:88:1: arith_expression returns [int attr_type] : a= multExpr ( ADD_OP b= multExpr | SUB_OP b= multExpr | EQ_OP b= multExpr | LE_OP b= multExpr | GE_OP b= multExpr | NE_OP b= multExpr | GREATER_OP b= multExpr | LESS_OP b= multExpr )* ;
	public final myCheckerParser.arith_expression_return arith_expression() throws RecognitionException {
		myCheckerParser.arith_expression_return retval = new myCheckerParser.arith_expression_return();
		retval.start = input.LT(1);

		Token ADD_OP5=null;
		Token SUB_OP6=null;
		Token EQ_OP7=null;
		Token LE_OP8=null;
		Token GE_OP9=null;
		Token NE_OP10=null;
		Token GREATER_OP11=null;
		Token LESS_OP12=null;
		ParserRuleReturnScope a =null;
		ParserRuleReturnScope b =null;

		try {
			// myChecker.g:88:41: (a= multExpr ( ADD_OP b= multExpr | SUB_OP b= multExpr | EQ_OP b= multExpr | LE_OP b= multExpr | GE_OP b= multExpr | NE_OP b= multExpr | GREATER_OP b= multExpr | LESS_OP b= multExpr )* )
			// myChecker.g:88:43: a= multExpr ( ADD_OP b= multExpr | SUB_OP b= multExpr | EQ_OP b= multExpr | LE_OP b= multExpr | GE_OP b= multExpr | NE_OP b= multExpr | GREATER_OP b= multExpr | LESS_OP b= multExpr )*
			{
			pushFollow(FOLLOW_multExpr_in_arith_expression194);
			a=multExpr();
			state._fsp--;

			 
			  if (TRACEON) System.out.println("arith_expression: multExpr ( ADD_OP multExpr| SUB_OP multExpr | EQ_OP multExpr | LE_OP multExpr | GE_OP multExpr | NE_OP multExpr | GREATER_OP multExpr | LESS_OP multExpr)*");
			  retval.attr_type = Math.abs((a!=null?((myCheckerParser.multExpr_return)a).attr_type:0)); 
			  
			// myChecker.g:92:7: ( ADD_OP b= multExpr | SUB_OP b= multExpr | EQ_OP b= multExpr | LE_OP b= multExpr | GE_OP b= multExpr | NE_OP b= multExpr | GREATER_OP b= multExpr | LESS_OP b= multExpr )*
			loop7:
			while (true) {
				int alt7=9;
				switch ( input.LA(1) ) {
				case ADD_OP:
					{
					alt7=1;
					}
					break;
				case SUB_OP:
					{
					alt7=2;
					}
					break;
				case EQ_OP:
					{
					alt7=3;
					}
					break;
				case LE_OP:
					{
					alt7=4;
					}
					break;
				case GE_OP:
					{
					alt7=5;
					}
					break;
				case NE_OP:
					{
					alt7=6;
					}
					break;
				case GREATER_OP:
					{
					alt7=7;
					}
					break;
				case LESS_OP:
					{
					alt7=8;
					}
					break;
				}
				switch (alt7) {
				case 1 :
					// myChecker.g:92:9: ADD_OP b= multExpr
					{
					ADD_OP5=(Token)match(input,ADD_OP,FOLLOW_ADD_OP_in_arith_expression206); 
					pushFollow(FOLLOW_multExpr_in_arith_expression212);
					b=multExpr();
					state._fsp--;

					 
					          if (!match_operands((a!=null?((myCheckerParser.multExpr_return)a).attr_type:0), (b!=null?((myCheckerParser.multExpr_return)b).attr_type:0), (a!=null?(a.start):null).getLine(), (ADD_OP5!=null?ADD_OP5.getText():null))) retval.attr_type = 0;
					        
					}
					break;
				case 2 :
					// myChecker.g:95:6: SUB_OP b= multExpr
					{
					SUB_OP6=(Token)match(input,SUB_OP,FOLLOW_SUB_OP_in_arith_expression221); 
					pushFollow(FOLLOW_multExpr_in_arith_expression227);
					b=multExpr();
					state._fsp--;

					 
					          if (!match_operands((a!=null?((myCheckerParser.multExpr_return)a).attr_type:0), (b!=null?((myCheckerParser.multExpr_return)b).attr_type:0), (a!=null?(a.start):null).getLine(), (SUB_OP6!=null?SUB_OP6.getText():null))) retval.attr_type = 0;
					        
					}
					break;
				case 3 :
					// myChecker.g:98:9: EQ_OP b= multExpr
					{
					EQ_OP7=(Token)match(input,EQ_OP,FOLLOW_EQ_OP_in_arith_expression239); 
					pushFollow(FOLLOW_multExpr_in_arith_expression245);
					b=multExpr();
					state._fsp--;

					 
					          if (!match_operands((a!=null?((myCheckerParser.multExpr_return)a).attr_type:0), (b!=null?((myCheckerParser.multExpr_return)b).attr_type:0), (a!=null?(a.start):null).getLine(), (EQ_OP7!=null?EQ_OP7.getText():null))) retval.attr_type = 0;
					        
					}
					break;
				case 4 :
					// myChecker.g:101:9: LE_OP b= multExpr
					{
					LE_OP8=(Token)match(input,LE_OP,FOLLOW_LE_OP_in_arith_expression257); 
					pushFollow(FOLLOW_multExpr_in_arith_expression263);
					b=multExpr();
					state._fsp--;

					 
					          if (!match_operands((a!=null?((myCheckerParser.multExpr_return)a).attr_type:0), (b!=null?((myCheckerParser.multExpr_return)b).attr_type:0), (a!=null?(a.start):null).getLine(), (LE_OP8!=null?LE_OP8.getText():null))) retval.attr_type = 0;
					        
					}
					break;
				case 5 :
					// myChecker.g:104:9: GE_OP b= multExpr
					{
					GE_OP9=(Token)match(input,GE_OP,FOLLOW_GE_OP_in_arith_expression275); 
					pushFollow(FOLLOW_multExpr_in_arith_expression281);
					b=multExpr();
					state._fsp--;
